GNOME Bugzilla – Bug 711368
plugin-appstream: Return FALSE if we set GError
Last modified: 2013-11-05 00:14:20 UTC
Side note: an OSTree-like rigorous coding style where ret = FALSE always at the start of a function would make this error setting errors not happen.
Created attachment 258892 [details] [review] plugin-appstream: Return FALSE if we set GError
Review of attachment 258892 [details] [review]: sure
Attachment 258892 [details] pushed as 9a7e11d - plugin-appstream: Return FALSE if we set GError