plugin-appstream: Return FALSE if we set GError

Side note: an OSTree-like rigorous coding style where ret = FALSE
always at the start of a function would make this error setting errors
not happen.

https://bugzilla.gnome.org/show_bug.cgi?id=711368